removing local state

--- a/website/site/index.html
+++ b/website/site/index.html
@@ -99,6 +99,25 @@ if (is_top_frame) { $('body').addClass('wm-top-page'); }
 </li>
 <li class="wm-toc-li-nested collapse">
   <ul class="wm-toctree">
+      <li class="wm-toc-li wm-toc-lev2 "><a href="tarea/cronograma/" class="wm-article-link wm-toc-text">Cronograma de actividades</a>
+</li>
+      <li class="wm-toc-li wm-toc-lev2 "><a href="tarea/predeterminada/" class="wm-article-link wm-toc-text">Prácticas predeterminadas</a>
+</li>
+      <li class="wm-toc-li wm-toc-lev2 wm-toc-opener"><span class="wm-toc-text">Protocolo de traducción</span>
+</li>
+<li class="wm-toc-li-nested collapse">
+  <ul class="wm-toctree">
+      <li class="wm-toc-li wm-toc-lev3 "><a href="tarea/protocolo/fases/" class="wm-article-link wm-toc-text">Fases</a>
+</li>
+      <li class="wm-toc-li wm-toc-lev3 "><a href="tarea/protocolo/equipos/" class="wm-article-link wm-toc-text">Equipos</a>
+</li>
+      <li class="wm-toc-li wm-toc-lev3 "><a href="tarea/protocolo/interaccion/" class="wm-article-link wm-toc-text">Interaccion</a>
+</li>
+      <li class="wm-toc-li wm-toc-lev3 "><a href="tarea/protocolo/compensacion/" class="wm-article-link wm-toc-text">Compensacion</a>
+</li>
+  </ul>
+</li>
+
       <li class="wm-toc-li wm-toc-lev2 wm-toc-opener"><span class="wm-toc-text">Directrices para el control de calidad</span>
 </li>
 <li class="wm-toc-li-nested collapse">
@@ -110,14 +129,17 @@ if (is_top_frame) { $('body').addClass('wm-top-page'); }
   </ul>
 </li>
 
-      <li class="wm-toc-li wm-toc-lev2 "><a href="tarea/cronograma/" class="wm-article-link wm-toc-text">Cronograma de actividades</a>
+      <li class="wm-toc-li wm-toc-lev2 wm-toc-opener"><span class="wm-toc-text">Guía de traducción</span>
 </li>
-      <li class="wm-toc-li wm-toc-lev2 "><a href="tarea/guia/" class="wm-article-link wm-toc-text">Guía de traducción</a>
+<li class="wm-toc-li-nested collapse">
+  <ul class="wm-toctree">
+      <li class="wm-toc-li wm-toc-lev3 "><a href="tarea/guia/" class="wm-article-link wm-toc-text">Qué es la guía de traducción</a>
 </li>
-      <li class="wm-toc-li wm-toc-lev2 "><a href="tarea/como_rellenar/" class="wm-article-link wm-toc-text">Cómo rellenar la guía de traducción</a>
+      <li class="wm-toc-li wm-toc-lev3 "><a href="tarea/como_rellenar/" class="wm-article-link wm-toc-text">Cómo rellenar la guía de traducción</a>
 </li>
-      <li class="wm-toc-li wm-toc-lev2 "><a href="tarea/predeterminada/" class="wm-article-link wm-toc-text">Prácticas predeterminadas</a>
+  </ul>
 </li>
+
   </ul>
 </li>
 
@@ -202,5 +224,5 @@ El proyecto es parte de los esfuerzos del equipo de investigación [Transducens]
 </html>
 <!--
 MkDocs version : 1.6.1
-Build Date UTC : 2025-09-30 09:32:51.917471+00:00
+Build Date UTC : 2025-12-23 13:26:02.766263+00:00
 -->
