testing with 100 sents

--- a/website/site/tarea/cronograma/index.html
+++ b/website/site/tarea/cronograma/index.html
@@ -87,7 +87,7 @@ if (is_top_frame) { $('body').addClass('wm-top-page'); }
     
 
     <h1 id="cronograma-de-actividades">Cronograma de actividades</h1>
-<p><em>Todas las horas están en la zona horaria de Guatemala (CST, UTC-6).</em></p>
+<p><em>Todas las horas están en la zona horaria de Guatemala (CET, UTC-6).</em></p>
 <hr />
 <h2 id="lunes-9-de-febrero-de-2026">Lunes, 9 de febrero de 2026</h2>
 <h3 id="0800-0900-bienvenida">08:00 – 09:00 | <strong>Bienvenida</strong></h3>
@@ -96,8 +96,10 @@ if (is_top_frame) { $('body').addClass('wm-top-page'); }
 <p>Presentación del proyecto a cargo de Andrés Lou Ríos. Se presentarán rápidamente los conceptos de PLN, TA, luego se enfocará en la naturaleza de FLORES+ y su importancia para el desarrollo de tecnologías de lenguaje para lenguas de escasos recursos; después, se presentará en detalle las fases de la tarea de traducción, la división de los trabajadores en traductores y revisores, y se echará un primer vistazo a la interfaz de traducción.</p>
 <ul>
 <li><strong>Archivos adjuntos:</strong><ul>
-<li><a href="https://drive.google.com/open?id=17p2S0ktRQtZhD_RkamsWf2ZtXSRhGjbo">directrices_cc.pdf</a></li>
-<li><a href="https://drive.google.com/open?id=19MmnWSmRHJL560sgESuAD1uI90mDB302">doc_auxiliar_guia_de_traduccion.pdf</a></li>
+<li><a href="https://drive.google.com/file/d/10HUW6x9Be3AF8IGA5BkBJHhr7f63ioIw/view?usp=drive_link">Cronograma de actividades</a></li>
+<li><a href="https://drive.google.com/file/d/1384UGuMiFK4as3xvN6lVsU0Y6H1_09Mh/view?usp=sharing">Aspectos a considerarse durante la traducción</a></li>
+<li><a href="https://drive.google.com/file/d/1ZGTZHiQ2GUK59IcScvu5dtV4RRwtFK-o/view?usp=sharing">Cómo rellenar la guía de traducción</a></li>
+<li><a href="https://drive.google.com/file/d/1PsP-LHpzqlOJbpqiNiFBPLVlL1gBTOVq/view?usp=drive_link">Tipología de errores</a></li>
 </ul>
 </li>
 </ul>
@@ -110,7 +112,7 @@ if (is_top_frame) { $('body').addClass('wm-top-page'); }
 <p>Donde se discute: Dialecto a utilizarase - Convención ortográfica a utilizarse.</p>
 <ul>
 <li><strong>Archivos adjuntos:</strong><ul>
-<li><a href="https://drive.google.com/open?id=19MmnWSmRHJL560sgESuAD1uI90mDB302">doc_auxiliar_guia_de_traduccion.pdf</a></li>
+<li><a href="https://drive.google.com/file/d/1ZGTZHiQ2GUK59IcScvu5dtV4RRwtFK-o/view?usp=sharing">Cómo rellenar la guía de traducción</a></li>
 <li><a href="https://drive.google.com/open?id=1dpJinQXeNp3RlXCh8hVtKyf6DNHUnwPb56ISt7OpiuY">Guía de traducción</a></li>
 </ul>
 </li>
