adding post-edited devtest

--- a/website/site/tarea/cronograma/index.html
+++ b/website/site/tarea/cronograma/index.html
@@ -98,7 +98,7 @@ if (is_top_frame) { $('body').addClass('wm-top-page'); }
 <li><strong>Archivos adjuntos:</strong><ul>
 <li><a href="https://drive.google.com/file/d/10HUW6x9Be3AF8IGA5BkBJHhr7f63ioIw/view?usp=drive_link">Cronograma de actividades</a></li>
 <li><a href="https://drive.google.com/file/d/1384UGuMiFK4as3xvN6lVsU0Y6H1_09Mh/view?usp=sharing">Aspectos a considerarse durante la traducción</a></li>
-<li><a href="https://drive.google.com/file/d/1ZGTZHiQ2GUK59IcScvu5dtV4RRwtFK-o/view?usp=sharing">Cómo rellenar la guía de traducción</a></li>
+<li><a href="https://drive.google.com/file/d/1UeI-rwHf_iiV9YSqljrqqwUb8NToLv3T/view?usp=drive_link">Cómo rellenar la guía de traducción</a></li>
 <li><a href="https://drive.google.com/file/d/1PsP-LHpzqlOJbpqiNiFBPLVlL1gBTOVq/view?usp=drive_link">Tipología de errores</a></li>
 </ul>
 </li>
@@ -116,7 +116,7 @@ if (is_top_frame) { $('body').addClass('wm-top-page'); }
 <p>Donde se discute: Dialecto y convención ortográfica a utilizarse. Además, donde se tratan los siguientes temas: términos sin equivalente directo, texto cortado, direcciones, fechas, topónimos, nombres propios, nombres de organismos y denominaciones oficiales, siglas y acrónimos, títulos, diplomas, y calificaciones.</p>
 <ul>
 <li><strong>Archivos adjuntos:</strong><ul>
-<li><a href="https://drive.google.com/file/d/1ZGTZHiQ2GUK59IcScvu5dtV4RRwtFK-o/view?usp=sharing">Cómo rellenar la guía de traducción</a></li>
+<li><a href="https://drive.google.com/file/d/1UeI-rwHf_iiV9YSqljrqqwUb8NToLv3T/view?usp=drive_link">Cómo rellenar la guía de traducción</a></li>
 <li><a href="https://drive.google.com/open?id=1dpJinQXeNp3RlXCh8hVtKyf6DNHUnwPb56ISt7OpiuY">Guía de traducción</a></li>
 </ul>
 </li>
@@ -124,7 +124,7 @@ if (is_top_frame) { $('body').addClass('wm-top-page'); }
 <h3 id="1030-1045-descanso">10:30 – 10:45 | <strong>Descanso</strong></h3>
 <h3 id="1045-1230-elaboracion-de-la-guia-de-traduccion">10:45 – 12:30 | <strong>Elaboración de la guía de traducción</strong></h3>
 <h3 id="1230-1330-almuerzo-comida">12:30 – 13:30 | <strong>Almuerzo (comida)</strong></h3>
-<h3 id="1330-1530-elaboracion-de-la-guia-de-traduccion">13:30 – 15:30 | **Elaboración de la guía de traducción</h3>
+<h3 id="1330-1530-elaboracion-de-la-guia-de-traduccion">13:30 – 15:30 | <strong>Elaboración de la guía de traducción</strong></h3>
 <hr />
 <h2 id="martes-10-de-febrero-de-2026">Martes, 10 de febrero de 2026</h2>
 <h3 id="0800-1030-elaboracion-del-vocabulario">08:00 – 10:30 | <strong>Elaboración del vocabulario</strong></h3>
